--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas></canvas>
+    <canvas id="game"></canvas>
     <script type="module" src="./scripts/game.js"></script>
 </body>
 </html>
