--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <canvas id="score"></canvas>
     <canvas id="game"></canvas>
     <script type="module" src="./scripts/game.js"></script>
 </body>
