Add leaderboard and sign in buttons (yuck)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="score"></canvas>
+    <div class="top-bar">
+        <button>View Leaderboard</button>
+        <canvas id="score"></canvas>
+        <button>austinaluzion</button>
+    </div>
     <canvas id="game"></canvas>
     <script type="module" src="./scripts/game.js"></script>
 </body>
