Add main script and fetch user info from backend

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="top-bar">
-        <button>View Leaderboard</button>
+        <button class="leaderboard">View Leaderboard</button>
         <canvas id="score"></canvas>
-        <button>austinaluzion</button>
+        <button class="sign-in">Sign In</button>
     </div>
     <canvas id="game"></canvas>
-    <script type="module" src="./scripts/game.js"></script>
+    <script type="module" src="./scripts/script.js"></script>
 </body>
 </html>
