Implement leaderboard functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="header">
+        <button class="play hidden">Back To Game</button>
         <button class="leaderboard">Leaderboard</button>
         <button class="sign-in"><a href="http://localhost:3000/login">Sign In</a></button>
         <div class="user hidden"></div>
@@ -15,6 +16,7 @@
     <div class="cabinet">
         <canvas id="score"></canvas>
         <canvas id="game"></canvas>
+        <div class="scores hidden"></div>
     </div>
     <script type="module" src="./scripts/script.js"></script>
 </body>
