--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
         <button class="play hidden">Back To Game</button>
         <button class="leaderboard">Leaderboard</button>
-        <button class="sign-in"><a href="http://localhost:3000/login">Sign In</a></button>
+        <button class="sign-in"><a href="https://flamin-finger-backend.fly.dev/login">Sign In</a></button>
         <div class="user hidden"></div>
     </div>
     <div class="cabinet">
