--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Flamin' Finger</title>
+    <meta property="og:title" content="Flamin' Finger">
+    <meta property="og:description" content="A revival of the classic 2003 arcade game">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
