Replace score canvas with div

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="user hidden"></div>
     </div>
     <div class="cabinet">
-        <canvas id="score"></canvas>
-        <canvas id="game"></canvas>
+        <div class="score">0</div>
+        <canvas class="game"></canvas>
         <div class="scores hidden"></div>
     </div>
     <script type="module" src="./scripts/script.js"></script>
